<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddBooksManually">

    <EditText
        android:id="@+id/titleManual"
        android:layout_width="215dp"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="112dp"
        android:ems="10"
        android:hint="@string/titleManual"
        android:inputType="textPersonName"
        android:text="@string/titleManual"
        app:layout_constraintStart_toEndOf="@+id/titleManual_label"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/authorManual"
        android:layout_width="215dp"
        android:layout_height="43dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/authorManual"
        android:inputType="textPersonName"
        android:text="@string/authorManual"
        app:layout_constraintStart_toEndOf="@+id/authorManual_label"
        app:layout_constraintTop_toBottomOf="@+id/titleManual" />

    <EditText
        android:id="@+id/genreManual"
        android:layout_width="215dp"
        android:layout_height="45dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/genreManual"
        android:inputType="textPersonName"
        android:text="@string/genreManual"
        app:layout_constraintStart_toEndOf="@+id/genreManual_label"
        app:layout_constraintTop_toBottomOf="@+id/authorManual" />

    <TextView
        android:id="@+id/titleManual_label"
        android:layout_width="107dp"
        android:layout_height="31dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="112dp"
        android:text="@string/titleManual_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/authorManual_label"
        android:layout_width="107dp"
        android:layout_height="31dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="36dp"
        android:text="@string/authorManual_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleManual_label" />

    <TextView
        android:id="@+id/genreManual_label"
        android:layout_width="107dp"
        android:layout_height="31dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="36dp"
        android:text="@string/genreManual_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authorManual_label" />

    <Button
        android:id="@+id/manualButon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginLeft="156dp"
        android:layout_marginTop="324dp"
        android:text="@string/manualButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>