<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddBooksActivity">

    <EditText
        android:id="@+id/addTitle"
        android:layout_width="236dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/addTitle"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/addTitle_label"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addTitle_label"
        android:layout_width="86dp"
        android:layout_height="20dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="24dp"
        android:text="@string/addTitle_label"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addTitleButton"
        android:layout_width="52dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/addTitleButton"
        android:textSize="8sp"
        app:layout_constraintStart_toEndOf="@+id/addTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addISBN_label"
        android:layout_width="92dp"
        android:layout_height="19dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="28dp"
        android:text="@string/addISBN_label"
        android:textSize="14sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTitle_label" />

    <EditText
        android:id="@+id/addISBN"
        android:layout_width="234dp"
        android:layout_height="33dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:hint="@string/addISBN"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/addISBN_label"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addISBNButton"
        android:layout_width="55dp"
        android:layout_height="31dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/addISBNButton"
        android:textSize="8sp"
        app:layout_constraintStart_toEndOf="@+id/addISBN"
        app:layout_constraintTop_toBottomOf="@+id/addTitleButton" />

    <Button
        android:id="@+id/addManualButton"
        android:layout_width="250dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/addManualButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/possibleBooks" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/possibleBooks"
        android:layout_width="414dp"
        android:layout_height="384dp"
        android:layout_marginTop="132dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/manageFinishButton"
        android:layout_width="86dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/doneButton"
        app:layout_constraintStart_toEndOf="@+id/addManualButton"
        app:layout_constraintTop_toBottomOf="@+id/possibleBooks" />

</androidx.constraintlayout.widget.ConstraintLayout>